nucleo-picker-vt/tests/scenarios/snapshots/scenarios__unicode__basic_unicode@narrow-before-final.snap
---
source: nucleo-picker-vt/tests/scenarios/unicode.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: narrow-before-final
  name_expression: "\"narrow-before-final\""
  sequence: 10
---
version: 1
size:
  cols: 20
  rows: 12
screen: alternate
cursor:
  position:
    x: 2
    y: 11
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "  mixed café 서울 ……"
  - "  emoji flag 🏳️‍🌈 — v…"
  - "  emoji profession …"
  - "  emoji family 👨‍👩‍👧‍👦 —…"
  - "  日本語 京都 漢字……"
  - "  日本語 東京 ひら……"
  - "  조선말 평양 문화 …"
  - "  한국어 서울 한글 …"
  - "  latin NFD café dé…"
  - ▌ latin NFC café dé…
  - "  10/10 ────────────"
  - ">                   "
styles:
  - row: 9
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 9
    start: 1
    end: 20
    background: "#666666"
    bold: true
  - row: 10
    start: 0
    end: 7
    foreground: "#b9ca4a"
    italic: true
  - row: 10
    start: 7
    end: 20
    foreground: "#c5c8c6"
    italic: true
